# Solar-System-Explorer-OpenGL

./: CMakeLists.txt  Camara.cpp  Camara.h  GrafoSatelite.cpp  Main.cpp  NodoGrafoEscena.h  Planeta.cpp  Planeta.h  README.md  SistemaSolar.cpp  SistemaSolar.h  igvTextura.cpp  igvTextura.h
